# ProbeCode

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: release.yml
CodingAgent/: config.py  main.py
CodingAgent/inspector/: context_manager.py
CodingAgent/llm/: README.md  agent.py  chat.py  client_utils.py  config.json  llm_agent.py  mcp_tool_integrate.py  memory_manager.py  prompt.py  server.py  utils.py
CodingAgent/llm/agent/: async_agent.py  base_agent.py  base_chat.py  client_chat.py  context.py  memory.py  utils.py
CodingAgent/llm/prompt/: initial_prompt.md
CodingAgent/llm/tools/: README.md  code_parser.py  file_ops.py  tool_manager.py  web_search.py
CodingAgent/llm/tools/test/: file_ops.json  fmp_test.py  web_search.json
CodingAgent/pyparser/: README.md  parser.py
CodingAgent/pyparser/example/: another_result.json  empty_result.json  example.py  example_result.json  simple.py  simple_result.json
CodingAgent/pyparser/test/: test.py  test_backward_compatibility.py  test_programmatic.py
CodingAgent/utils/: greetings.py  log.py  logging_info.py
inspector/: code_loader.py  context_manager.py
scripts/: run.sh  run_with_uv.sh  test_mcp.sh
template/: r1_tool.jinja
test/: test_walk_file.py
