[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CodingAgent"
version = "0.1.0"
description = "Simple Coding Agent"
authors = [{ name = "Xiyuan Yang", email = "yangxiyan@sjtu.edu.cn" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.64.0",
    "colorlog>=6.9.0",
    "ddgs>=9.5.2",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "mcp>=1.13.0",
    "nest-asyncio>=1.6.0",
    "prompt-toolkit>=3.0.51",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "zhipuai>=2.1.5.20250801",
]

[project.scripts]
coding_agent="CodingAgent.main:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "test*",
    "log*",
    "__pycache__*",
]

[tool.setuptools.package-data]
"CodingAgent" = ["config.yaml"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
