[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ProbeCode"
version = "0.2.0"
description = "ProbeCode: AI coding agent integrating static code inspection with a ReAct framework to understand and memorize long-context code."
authors = [{ name = "Xiyuan Yang", email = "yangxiyan@sjtu.edu.cn" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.64.0",
    "colorlog>=6.9.0",
    "ddgs>=9.5.2",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "mcp>=1.13.0",
    "nest-asyncio>=1.6.0",
    "prompt-toolkit>=3.0.51",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "zhipuai>=2.1.5.20250801",
]

[project.scripts]
probecode = "CodingAgent.main:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "log*", "__pycache__*"]

[tool.setuptools.package-data]
"probecode" = ["config.yaml"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
