[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ProbeCode"
version = "0.2.0"
description = "ProbeCode: AI coding agent integrating static code inspection with a ReAct framework to understand and memorize long-context code."
authors = [{ name = "Xiyuan Yang", email = "yangxiyan@sjtu.edu.cn" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.64.0",
    "colorlog>=6.9.0",
    "ddgs>=9.5.2",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.117.1",
    "flask>=3.1.2",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "mcp>=1.13.0",
    "narwhals>=2.5.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.109.1",
    "prompt-toolkit>=3.0.51",
    "pyext>=0.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "serpapi>=0.1.5",
    "zhipuai>=2.1.5.20250801",
]

[project.scripts]
probecode = "CodingAgent.main:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "log*", "__pycache__*"]

[tool.setuptools.package-data]
"probecode" = ["config.yaml"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
